--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "@types/node": "^20.10.0"
+  },
+  "peerDependencies": {
+    "axios": "^1.6.0"
   }
 }
 
