--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "kill-port": "node scripts/kill-port.js",
     "build": "tsc",
     "start": "node dist/index.js",
-    "migrate": "node dist/migrations/migrate.js"
+    "migrate": "node dist/migrations/migrate.js",
+    "approve-user": "ts-node src/scripts/approve-user.ts"
   },
   "dependencies": {
     "@types/multer": "^2.0.0",
