--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:mobile": "cd packages/mobile && npm run start",
     "dev:web": "cd packages/web && npm run dev",
     "dev:backend": "cd backend && npm run dev",
-    "build": "npm run build:all",
+    "build": "npm install && npm run build:all",
     "build:shared": "cd packages/shared && npm run build",
     "build:web": "cd packages/web && npm run build",
     "build:backend": "cd backend && npm run build",
