--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm install"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "cd backend && npm start"
+cmd = "cd backend && node dist/index.js"
 
